--- a/styles/compile/gap.sass
+++ b/styles/compile/gap.sass
@@ -12,7 +12,7 @@ div[is="gap"]
   &.large
     height: units(12)
 
-  @includ min($screen-m)
+  @include min($screen-m)
     height: units(12)
 
     &.small
