--- a/styles/compile/product.sass
+++ b/styles/compile/product.sass
@@ -1,7 +1,6 @@
 @import '../assets'
 
-main[is="product"]
-  margin-top: units(4)
+div[is="product"]
 
   > div
     @extend %main-content
